<resources>
    <string name="app_name">RemindMeApp</string>
    <string name="privacy">www.google.com/policies/privacy</string>

    <!-- Content Description -->
    <string name="fab_plus_rem">Add Button</string>
    <string name="logo_image">App Logo</string>
    <string name="empty_text">...</string>
    <string name="button_in_out">Button You go in or out</string>
    <string name="button_in">Button in</string>
    <string name="button_out">Button out</string>
    <string name="add_place_btn">Add Place Buttom</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="pick_day">Pick a day of the week</string>
    <string name="person_logo">Person Logo</string>
    <string name="icon">Icon on reminder list</string>
    <string name="sms_icon">Sms icon</string>

    <!-- Tabs -->
    <string name="reminders">Reminders</string>
    <string name="your_places">Your Places</string>


    <!-- Reminders -->
    <string name="warning_permission">Until you grant the permission, we canot display the Contacts</string>
    <string name="add_new_reminder">Add a New Reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="in">When you arrive</string>
    <string name="out">When you leave</string>
    <string name="in_at">When you arrive at: </string>
    <string name="select_place">Select place</string>
    <string name="remind_me_to">Remind me to:</string>
    <string name="notes">Notes</string>
    <string name="enter_reminder_txt">Add the name of the reminder</string>
    <string name="no_reminder_data">Addition of the reminder has been canceled</string>
    <string name="removing_reminder">Removing the reminder</string>
    <string name="removing_reminder_message">Do you want to delete a reminder from the list</string>
    <string name="detail_error_message">Reminderata not available</string>
    <string name="no_reminder">It looks like you do not have any reminder yet</string>

    <string name="reminder_set">Reminder settings</string>
    <string name="remind_once">Remind me only once</string>
    <string name="remind_always">Always remind me</string>
    <string name="remind_week">Remind me on selected days of the week</string>
    <string name="remind_me_on">Remind me on:</string>

    <string name="add_action">Add Action</string>
    <string name="action">Action:</string>
    <string name="act_remind_only">remind only</string>
    <string name="actn_send_sms">send SMS</string>

    <string name="eg_0">E.g. Buy milk</string>
    <string name="eg_1">E.g. Feed the cat</string>
    <string name="eg_2">E.g. Take umbrella</string>
    <string name="eg_3">E.g. Send message to Peter</string>

    <string name="day_0">MON</string>
    <string name="day_1">TUE</string>
    <string name="day_2">WED</string>
    <string name="day_3">THU</string>
    <string name="day_4">FRI</string>
    <string name="day_5">SAT</string>
    <string name="day_6">SUN</string>

    <!--Add Action -->
    <string name="choose_contact">Choose a contact</string>
    <string name="sms_header">sms message</string>
    <string name="sms_message_txt">message text</string>
    <string name="enter_message_txt">Please enter message text</string>
    <string name="enter_message_btn">send sms to:</string>
    <string name="action_message_btn">Sending sms to:</string>

    <!--Place -->
    <string name="need_permission">You need to enable location permissions first</string>
    <string name="play_services_problem">Install or update Google Play Services in order to continue</string>
    <string name="add_place_name">Add place name</string>
    <string name="error_place_name">Enter the name of the place</string>
    <string name="add_place_cancel">Adding space has been canceled</string>
    <string name="removing_place">Removing the place</string>
    <string name="removing_place_header2">Delete reminders associated with a place</string>
    <string name="removing_place_message">Do you want to delete a place from the list</string>
    <string name="removing_place_in_reminders">The place you want to delete is used in the reminders: </string>
    <string name="removing_place_in_reminders_end">Deleting a place also removes these reminders</string>
    <string name="already_exist">The place is already on the list</string>
    <string name="already_exist_2">Do you want to change the name?</string>

    <!--Notification-->
    <string name="notification">I remind you because you</string>
    <string name="notification_in">came to</string>
    <string name="notification_out">go out from</string>


    <!-- No Used -->
    <string name="act_rem">Active reminders</string>
    <string name="arch_rem">Archived reminders</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--Adver -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>


    <!--Google Api Key -->
    <string name="api_key"> ... </string>


    <!-- No Used -->
    <string name="reminders_was_added">The reminders has been put into the widget</string>

</resources>
