<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.tomcat.remindmeapp.utilitis.TextViewRoboto
        android:id="@+id/select_place_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/sms_header"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_send_sms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_frame"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_plus_blue"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/choose_contact"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_place_tv" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/sms_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/MyInputAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_sms">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sms_message_txt"
            android:textSize="19sp"
            app:hintTextAppearance="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>




</android.support.constraint.ConstraintLayout>