<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height"
        android:background="?colorPrimary">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleMarginStart="72dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/rem_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/logo1c"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/logo_image"
               />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:collapseIcon="@drawable/logo1c"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
            />

    <com.example.tomcat.remindmeapp.CustomViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/google_privacy"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:gravity="bottom|center_vertical"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/powered_by_google_light"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingBottom="2dp"
            android:textSize="12sp"
            android:text="@string/privacy"
            android:textAlignment="center"
            android:textColorLink="@color/colorPrimary" />
    </LinearLayout>

    <TextView
        android:id="@+id/remind_info"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="135dp"
        android:layout_marginEnd="110dp"
        android:text="@string/no_reminder"
        android:textSize="18sp"
        android:visibility="gone"/>


    <ImageView
        android:id="@+id/lines"
        android:visibility="gone"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/lines"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/fab_main"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:onClick="plusFabButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/oval_ripple"
        android:contentDescription="@string/fab_plus_rem"
        android:elevation="6dp"
        android:src="@drawable/fab_plus"
        android:stateListAnimator="@drawable/fab_raise" />

</android.support.design.widget.CoordinatorLayout>