<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp">

        <com.example.tomcat.remindmeapp.utilitis.TextViewRoboto
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:text="@string/add_new_reminder"/>

        </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/add_place_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:srcCompat="@drawable/circle"
        android:contentDescription="@string/add_place_btn"/>

    <ImageView
        android:id="@+id/pointer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/add_place_btn"
        app:layout_constraintBottom_toTopOf="@+id/oval_point"
        app:layout_constraintEnd_toEndOf="@+id/add_place_btn"
        app:layout_constraintStart_toStartOf="@+id/add_place_btn"
        app:srcCompat="@drawable/pointer" />

    <ImageView
        android:id="@+id/oval_point"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/add_place_btn"
        app:layout_constraintEnd_toEndOf="@+id/add_place_btn"
        app:layout_constraintStart_toStartOf="@+id/add_place_btn"
        app:srcCompat="@drawable/oval"
        android:contentDescription="@string/add_place_btn"/>

    <com.example.tomcat.remindmeapp.utilitis.TextViewRobotoLight
        android:id="@+id/select_place_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_place"
        android:textColor="@android:color/background_dark"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_place_btn" />

    <include
        android:id="@+id/in_out_btn"
        layout="@layout/in_out_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_place_tv" />


    <com.example.tomcat.remindmeapp.utilitis.TextViewRobotoLight
        android:id="@+id/remind_me_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/background_dark"
        android:text="@string/remind_me_to"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_out_btn" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/MyInputAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remind_me_tv">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:hintTextAppearance="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>


    <include
        android:id="@+id/reminder_settings"
        layout="@layout/btn_reminder_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_lay" />

</android.support.constraint.ConstraintLayout>